Tabcomplete for multiple blocks